--- a/app/Views/index.html
+++ b/app/Views/index.html
@@ -87,15 +87,15 @@
                 </figure>
 
                 <!-- Texte -->
-                <article class="col-md-6 bg-success text-light p-4 rounded shadow">
-                <p class="text-center">
-                    EcoRide, c’est la nouvelle génération du covoiturage en France : simple, écologique et économique. 
-                    Notre plateforme connecte conducteurs et passagers pour transformer chaque trajet en une opportunité 
-                    de réduire les coûts et l’empreinte carbone. Nous ne proposons pas seulement un service de mobilité, 
-                    nous offrons une expérience conviviale et durable où chaque kilomètre partagé contribue à préserver 
-                    notre planète. Avec EcoRide, voyager devient un acte responsable et intelligent.
-                </p>
-                </article>
+                <div class="col-md-6 bg-success text-light p-4 rounded shadow">
+                    <p class="text-center">
+                        EcoRide, c’est la nouvelle génération du covoiturage en France : simple, écologique et économique. 
+                        Notre plateforme connecte conducteurs et passagers pour transformer chaque trajet en une opportunité 
+                        de réduire les coûts et l’empreinte carbone. Nous ne proposons pas seulement un service de mobilité, 
+                        nous offrons une expérience conviviale et durable où chaque kilomètre partagé contribue à préserver 
+                        notre planète. Avec EcoRide, voyager devient un acte responsable et intelligent.
+                    </p>
+                </div>
             </div>
             </section>
 
