--- a/app/Views/utilisateur.html
+++ b/app/Views/utilisateur.html
@@ -102,7 +102,7 @@
         </div>
         </div>
 
-        <button class="btn btn-success mt-5 "><a class="text-decoration-none text-light" href="voiture.html">Accéder à mes véhicules</a></button>
+        <a class="text-decoration-none bg-success mt-5 text-light" href="voiture.html">Accéder à mes véhicules</a>
     </main>
     <footer class="d-flex flex-row align-items-center justify-content-around bg-success text-light">
         <p>&copy; EcoRide 2025</p>
