--- a/App/templates/contact/index.html.twig
+++ b/App/templates/contact/index.html.twig
@@ -51,7 +51,7 @@
                         </div>
 
                         <div class="d-grid">
-                            {{ form_widget(contactForm.save, {'attr': {'class': 'btn btn-primary'}}) }}
+                            {{ form_widget(contactForm.save, {'attr': {'class': 'btn btn-success'}}) }}
                         </div>
 
                     {{ form_end(contactForm) }}
