--- a/App/templates/reset_password/check_email.html.twig
+++ b/App/templates/reset_password/check_email.html.twig
@@ -37,20 +37,20 @@
                     <div class="card bg-light border-0 mb-4">
                         <div class="card-body">
                             <h5 class="card-title mb-3">
-                                <i class="bi bi-question-circle-fill text-primary me-2"></i>
+                                <i class="bi bi-question-circle-fill text-success me-2"></i>
                                 Vous n'avez pas reçu l'email ?
                             </h5>
                             <ul class="list-unstyled text-start mb-0">
                                 <li class="mb-2">
-                                    <i class="bi bi-chevron-right text-primary me-2"></i>
+                                    <i class="bi bi-chevron-right text-success me-2"></i>
                                     Vérifiez votre dossier <strong>spam/courrier indésirable</strong>
                                 </li>
                                 <li class="mb-2">
-                                    <i class="bi bi-chevron-right text-primary me-2"></i>
+                                    <i class="bi bi-chevron-right text-success me-2"></i>
                                     Vérifiez que l'adresse email est correcte
                                 </li>
                                 <li>
-                                    <i class="bi bi-chevron-right text-primary me-2"></i>
+                                    <i class="bi bi-chevron-right text-success me-2"></i>
                                     Patientez quelques minutes, la livraison peut prendre du temps
                                 </li>
                             </ul>
@@ -59,7 +59,7 @@
 
                     <!-- Boutons d'action -->
                     <div class="d-grid gap-2 mb-3">
-                        <a href="{{ path('app_forgot_password_request') }}" class="btn btn-primary btn-lg">
+                        <a href="{{ path('app_forgot_password_request') }}" class="btn btn-success btn-lg">
                             <i class="bi bi-arrow-repeat me-2"></i>
                             Renvoyer un email
                         </a>
