--- a/App/assets/styles/scss/main.scss
+++ b/App/assets/styles/scss/main.scss
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&family=Work+Sans:wght@400;500;600;700&display=swap');
+
+// Override default sans-serif stack to use Manrope, then Work Sans, with system fallbacks
+$font-family-sans-serif: 'Manrope', 'Work Sans', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
 @import './../../../node_modules/bootstrap-icons/font/bootstrap-icons.scss';
 @import './../../../node_modules/bootstrap/scss/bootstrap.scss';
 
