--- a/App/templates/profile/edit.html.twig
+++ b/App/templates/profile/edit.html.twig
@@ -211,7 +211,7 @@
     </div>
 
     <!-- Boutons d'action en bas -->
-    <div class="row mt-4">
+    <div class="row my-4">
         <div class="col-12">
             <a href="{{ path('app_profile') }}" class="btn btn-secondary">
                 <i class="bi bi-arrow-left"></i> Retour au profil
