--- a/App/assets/styles/scss/main.scss
+++ b/App/assets/styles/scss/main.scss
@@ -11,6 +11,27 @@ img.picture_index {
         height: 80vh;
     }
 
+.hero-text {
+        top: 8%;
+        width: min(90%, 700px);
+    }
+
+.hero-form {
+        width: min(92%, 900px);
+        margin: 1.5rem auto 0;
+    }
+
+@media (min-width: 992px) {
+    .hero-form {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 75%;
+        margin: 0;
+    }
+}
+
 section { 
     .card-size {
         max-width: 500px;
@@ -25,11 +46,18 @@ section {
     }
 }
 section.section_margin {
-        margin-top: -10rem; margin-bottom: 3rem;
+        margin-top: 2rem;
+        margin-bottom: 3rem;
 }
 
 h2.contact {
     width: 40%;  
     height: 50px; 
     border-radius: 100px; 
+}
+
+@media (max-width: 991.98px) {
+    img.picture_index {
+        height: 55vh;
+    }
 }
