--- a/App/templates/partials/_footer.html.twig
+++ b/App/templates/partials/_footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="d-flex flex-row align-items-center justify-content-center gap-4 bg-success text-light mt-auto w-100 py-3 text-center">
+<footer class="d-flex flex-column flex-lg-row align-items-center justify-content-center gap-4 bg-success text-light mt-auto w-100 py-3 text-center">
     <p class="mb-0">&copy; EcoRide 2025</p>
     <p class="mb-0">ecoride@gmail.com</p>
     <a class="text-decoration-none text-light mb-0" href="/">Mentions légales</a>
